Updated allowed origin and headers for CORS config